@@ -286,8 +286,10 @@ g_mime_message_add_recipients_from_string (GMimeMessage *message, char *type, co
 	g_hash_table_remove (message->header->recipients, type);
 	
 	addrlist = internet_address_parse_string (string);
-	if (addrlist)
+	if (addrlist) {
 		recipients = internet_address_list_concat (recipients, addrlist);
+		internet_address_list_destroy (addrlist);
+	}
 	
 	g_hash_table_insert (message->header->recipients, type, recipients);
 	
