@@ -1,3 +1,8 @@
+2002-04-02  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-message.c (g_mime_message_add_recipients_from_string):
+	Destroy the temporary addrlist.
+
 2002-03-29  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* configure.in: Detect the iconv-friendly formats for iso charsets
